force-app/main/default/objects/Project_Template__c/Project_Template__c.object-meta.xml
<CustomObject>
    <label>Implementation Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project/Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>