force-app/main/default/objects/Project_Template__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Uncheck the Template Field to save this record as Project.</errorMessage>
        <filterItems>
            <field>$Source.Template__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Project_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>