force-app/main/default/objects/Project_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>