force-app/main/default/objects/Project_Template__c/fields/Elevate_Type__c.field-meta.xml
<CustomField>
    <fullName>Elevate_Type__c</fullName>
    <label>Elevate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W2W2W</fullName>
            </value>
            <value>
                <fullName>Designated Lead</fullName>
            </value>
            <value>
                <fullName>Spotlight</fullName>
            </value>
            <value>
                <fullName>BAR Close Loop</fullName>
            </value>
            <value>
                <fullName>Red Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>