force-app/main/default/objects/Project_Template__c/fields/Impl_PGs__c.field-meta.xml
<CustomField>
    <fullName>Impl_PGs__c</fullName>
    <label>Impl PGs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>