force-app/main/default/objects/Project_Template__c/fields/IRAD_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>IRAD_Last_Modified_Date__c</fullName>
    <description>Used to populating the IRAD record&apos;s Last Modified Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Modified Date</label>
    <type>Date</type>
</CustomField>