force-app/main/default/objects/Project_Template__c/fields/Number_of_Lives__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lives__c</fullName>
    <label>Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>