force-app/main/default/objects/Project_Template__c/fields/Overall_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Project_Status__c</fullName>
    <description>This field will be used to find the status color for spot light report</description>
    <label>Overall Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>