force-app/main/default/objects/Project_Template__c/fields/Policy_Information__c.field-meta.xml
<CustomField>
    <fullName>Policy_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Information</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please remove the Policy Information to create a template.</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Policy_Information__c.Company__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Policy_Information__c</referenceTo>
    <relationshipLabel>Implementation Plans</relationshipLabel>
    <relationshipName>Implementation_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>