force-app/main/default/objects/Project_Template__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Choose Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Template__c.Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Project_Template__c</referenceTo>
    <relationshipLabel>Implementation Plans</relationshipLabel>
    <relationshipName>Project_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>