force-app/main/default/objects/Project_Template__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UHC</fullName>
            </value>
            <value>
                <fullName>Surest</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>UHC/Surest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>