force-app/main/default/objects/Project_Template__c/fields/Reason_for_Spotlight__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Spotlight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Spotlight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>