force-app/main/default/objects/Project_Template__c/fields/Spotlight__c.field-meta.xml
<CustomField>
    <fullName>Spotlight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spotlight</label>
    <type>Checkbox</type>
</CustomField>