force-app/main/default/objects/Project_Template__c/validationRules/CompanyORTemplateisMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyORTemplateisMandatory</fullName>
    <active>true</active>
    <description>Need to enter either Company or Template while creating the IPM</description>
    <errorConditionFormula>AND(ISNEW(),ISBLANK(Account__c), (Template__c=FALSE))</errorConditionFormula>
    <errorMessage>To create a template, please check the Template checkbox. To create a project, please select a company name.</errorMessage>
</ValidationRule>