force-app/main/default/objects/Project_Template__c/validationRules/EffectiveDate_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>EffectiveDate_Mandatory</fullName>
    <active>true</active>
    <description>Making Effective Date Mandatory if Template is Uncheked</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Account__c)), ISBLANK(Effective_Date__c))</errorConditionFormula>
    <errorDisplayField>Effective_Date__c</errorDisplayField>
    <errorMessage>Please enter the Effective Date for the Project</errorMessage>
</ValidationRule>