force-app/main/default/objects/Project_Template__c/validationRules/EffectiveDateNotGreaterThanCurrentYear.validationRule-meta.xml
<ValidationRule>
    <fullName>EffectiveDateNotGreaterThanCurrentYear</fullName>
    <active>true</active>
    <errorConditionFormula>OR((YEAR(Effective_Date__c)-YEAR(TODAY())) &gt; VALUE($Label.Value_of_Year),YEAR(Effective_Date__c) &lt; (YEAR(TODAY())-1))</errorConditionFormula>
    <errorDisplayField>Effective_Date__c</errorDisplayField>
    <errorMessage>Effective Date cannot be greater than 2 years from the current year (or) Less than 1 year from Current Year</errorMessage>
</ValidationRule>