force-app/main/default/objects/Project_Template__c/validationRules/StartDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateValidation</fullName>
    <active>true</active>
    <description>Satish 1/8/2020 - Updated Formula to check if record is new or Start Date is changed.</description>
    <errorConditionFormula>AND(
	OR(
		(YEAR(Start_Date__c)-YEAR(TODAY())) &gt; VALUE($Label.Value_of_Year),
		 YEAR(Start_Date__c) &lt; (YEAR(TODAY())-1)
	  ),
	OR(
	     ISCHANGED( Start_Date__c ), 
             ISNEW()
	  )
	)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date cannot be greater than 2 years from the current year (or) Less than 1 year from Current Year</errorMessage>
</ValidationRule>