force-app/main/default/objects/Project_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Policy_Information__c</columns>
    <columns>Number_of_Lives__c</columns>
    <columns>Template__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Project_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>