force-app/main/default/objects/Project_Template__c/listViews/My_Implementation_Plans.listView-meta.xml
<ListView>
    <fullName>My_Implementation_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Policy_Information__c</columns>
    <columns>Template__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Spotlight__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Implementation Plans</label>
</ListView>