force-app/main/default/objects/Project_Template__c/listViews/Spotlight_Timelines.listView-meta.xml
<ListView>
    <fullName>Spotlight_Timelines</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Spotlight__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Spotlight Timelines</label>
    <sharedTo>
        <group>CD_CM_IPM_Group</group>
    </sharedTo>
</ListView>